fixed template labels, updated readme, fixed aggregation error in loop

--- a/final_animation_steps.Rmd
+++ b/final_animation_steps.Rmd
@@ -42,11 +42,13 @@ get_ids <- function(SVG_name) {
 Load in the SVG we created and create a df of the ids
 ```{R}
 svg_total <- minisvg::parse_svg_doc("man/figures/total_lock_cross_section.svg")
+minisvg::knit_print.SVGDocument(svg_total)
+```
 
+```{R}
 df_svg_id <- get_ids(svg_total)
 df_svg_id
 ```
-
 
 We'll also need to read in the data.
 ```{R}
@@ -112,7 +114,7 @@ for (value in values) {
 
 ```
 
-All animations
+Animation for 1 boat
 ```{R}
 instruments <- unique(single_boat$INS_NAME)
 
@@ -190,12 +192,127 @@ minisvg::knit_print.SVGDocument(svg_total)
 ```
 
 
-Create a function that will run through each ship and create images.
+Create a loop that will run through each ship and create images.
 ```{R}
 boats <- unique(df_sgr$VESSEL_NAME)
 
 for (boat in boats) {
+  cat("Starting: ", boat)
+  cat('\n')
   
+  # get a fresh copy of the template
+  svg_total <- minisvg::parse_svg_doc("man/figures/total_lock_cross_section.svg")
+
+  df_svg_id <- get_ids(svg_total)
+  df_svg_id
+
+
+  # subset to get only boat data
+  single_boat <- df_sgr[df_sgr$VESSEL_NAME == boat,]
+  
+  # max salinity option (this is also the number of bins)
+  max_sal = 32
+  
+  colors <- colorspace::divergingx_hcl(n = max_sal, palette = 'RdYlBu')
+  colors <- rev(colors)
+  
+  # create a new column for the instrument name that matches the assigned id
+  single_boat$INS_NAME <- paste(sub(".*200-", "", single_boat$STATION_NAME), single_boat$SALINITY_GAGE_NAME, sep="_")
+  single_boat$COLOR <- ""
+  max_sal <- max_sal - 1
+  
+  # assign color column based on bins and diverging colors
+  for(i in 0:max_sal) {
+    single_boat$COLOR[single_boat$SALINITY_MEAS >= i & single_boat$SALINITY_MEAS < i + 1] <- colors[i + 1]
+  }
+
+  # create df to compare and QA check
+  color_df <- data.frame(colors)
+  color_df$sal_min <- 0:max_sal
+  color_df$sal_max <- 1:(max_sal + 1)
+  values <- df_svg_id$id
+  
+  for (value in values) {
+    df_svg_id$count[df_svg_id$id == value] <- length(single_boat$INS_NAME[single_boat$INS_NAME == value])
+  }
+  
+  # test to see if readings were taken at the same time. count the number of unique readings where instrument id in the options list
+
+  df_unique_readings <- unique(data.frame(single_boat$READING_TIME))
+  values <- df_unique_readings$single_boat.READING_TIME
+  for (value in values) {
+    df_unique_readings$count[df_unique_readings$single_boat.READING_TIME == value] <- length(single_boat$INS_NAME[single_boat$READING_TIME == value])
+  }
+  
+  instruments <- unique(single_boat$INS_NAME)
+
+  # create a keyframe df
+  df_keyframe <- data.frame(unique(single_boat$READING_TIME))
+  df_keyframe <- data.frame(df_keyframe[order(df_keyframe$unique.single_boat.READING_TIME.),])
+  df_keyframe$KEYFRAME_ID <- seq(from=1, to=100, length = nrow(df_keyframe))
+  
+  #rename column
+  names(df_keyframe)[names(df_keyframe) == "df_keyframe.order.df_keyframe.unique.single_boat.READING_TIME...."] <- "READING_TIME"
+  
+  for (insIndex in 1:length(instruments)) {
+    instrument <- instruments[insIndex]
+    
+    cat('(', insIndex, '/', length(instruments), ') ')
+    cat('Starting:', instrument)
+    
+    # find sub selection of readings
+    insReadings <- single_boat[single_boat$INS_NAME == instrument,]
+    
+    # put them in order
+    insReadings <-insReadings[order(insReadings$READING_TIME),]
+    
+    cat('-')
+    
+    # create keyname declarations
+    key_name = paste('anim_', instrument, sep="")
+    my_frame <- minicss::Keyframes$new(name = key_name)
+    
+    for (rowIndex in 1:nrow(df_keyframe)) {
+      currentReading <- df_keyframe$READING_TIME[rowIndex]
+      
+      if (length(insReadings$READING_TIME[grepl(currentReading, insReadings$READING_TIME)]) == 1) {
+        colorVal <- insReadings$COLOR[insReadings$READING_TIME == currentReading]
+      } else {
+        colorVal <- '#000000'
+      }
+      
+      my_frame$add(time = paste(df_keyframe$KEYFRAME_ID[rowIndex], "%",sep = ""), fill = colorVal)
+    }
+    svg_total$add_css(as.character(my_frame))
+  
+    cat('-')  
+    ################################################################################################## Define the animation
+    this_id <- instrument
+    anim_dur <- 60                     # animation duration in seconds
+    iter_count = 'infinite'
+    dir = 'normal'
+    # define the css animation
+    new_css <- Style$new(paste("#", this_id, sep=""))
+    # update with animation declaration
+    new_css$update(css_prop$animation(name = key_name, duration = anim_dur, iteration_count = iter_count, direction = dir))
+    # add that new css to the svg
+    svg_total$add_css(as.character(new_css))
+    
+    cat('-Complete')
+    cat('\n')
+  }
+  
+  # assign the labels manually in css to add the !important declaration 
+  svg_total$add_css(paste("#scale_low { fill: ", color_df[1,1] ,"!important;}", sep=""))
+  
+  svg_total$add_css(paste("#scale_mid { fill: ", color_df[16,1] ,"!important;}", sep=""))
+  
+  svg_total$add_css(paste("#scale_high { fill: ", color_df[32,1] ,"!important;}", sep=""))
+  
+  writeLines(as.character(svg_total), paste("man/figures/", boat, "_total_new.svg", sep=""))
+  
+  cat(boat, 'file written. Moving to next boat')
+  cat('\n')
 }
 
 ```
