--- a/README.Rmd
+++ b/README.Rmd
@@ -56,6 +56,8 @@ The visuals below are still under development and QA checks. The following list 
 
 5. Create a better graphically designed layout
 
+6. Add a boat that moves across the screen to signify locking time
+
 ## Guthorm Maersk
 The first visualization was ran only using data from lockage of the Guthorm Maersk ship.
 ![Panama Lock Cross Section](man/figures/GUTHORM MAERSK_total_new.svg) 
