fixed flashing black to flashing white, boats all move respective to their data, removed "TIME" label

--- a/README.Rmd
+++ b/README.Rmd
@@ -53,6 +53,10 @@ The visuals below are still under development and QA checks. The following list 
 
 3. Correctly incorporate dual lockages. Currently, they are shown only as a single moving boat
 
+4. Verify the LC2 & LC3 layout
+
+5. Make more effective use of functions. Currently chunks are run in for loops but could be more organized if utilizing functions for tasks. It is not currently known if this would improve current runtime to create all models
+
 ## Guthorm Maersk (Salinity)
 ![Panama Lock Cross Section](man/figures/GUTHORM MAERSK_total_new.svg) 
 
