--- a/final_animation_steps.Rmd
+++ b/final_animation_steps.Rmd
@@ -79,189 +79,8 @@ for (boat in boats) {
 
 ```
 
-We are only going to use 1 boat's data
-```{R}
-boat <- 'GUTHORM MAERSK'
 
-# subset to get only GUTHORM data
-single_boat <- df_sgr[df_sgr$VESSEL_NAME == boat,]
-
-```
-
-Create a column to match the salinity to a predefined bin
-```{R}
-# max salinity option (this is also the number of bins)
-max_sal = 32
-
-colors <- colorspace::divergingx_hcl(n = max_sal, palette = 'RdYlBu')
-colors <- rev(colors)
-
-# create a new column for the instrument name that matches the assigned id
-single_boat$INS_NAME <- paste(sub(".*200-", "", single_boat$STATION_NAME), single_boat$SALINITY_GAGE_NAME, sep="_")
-single_boat$COLOR <- ""
-max_sal <- max_sal - 1
-
-# assign color column based on bins and diverging colors
-for(i in 0:max_sal) {
-  single_boat$COLOR[single_boat$SALINITY_MEAS >= i & single_boat$SALINITY_MEAS < i + 1] <- colors[i + 1]
-}
-```
-
-Exploratory investigation to see if any data is missing. Also creates color DF that matches bins to 
-```{R}
-# create df to compare and QA check
-color_df <- data.frame(colors)
-color_df$sal_min <- 0:max_sal
-color_df$sal_max <- 1:(max_sal + 1)
-values <- df_svg_id$id
-
-for (value in values) {
-  df_svg_id$count[df_svg_id$id == value] <- length(single_boat$INS_NAME[single_boat$INS_NAME == value])
-}
-
-# test to see if readings were taken at the same time. count the number of unique readings where instrument id in the options list
-print(length(unique(single_boat$READING_TIME)))
-
-df_unique_readings <- unique(data.frame(single_boat$READING_TIME))
-values <- df_unique_readings$single_boat.READING_TIME
-for (value in values) {
-  df_unique_readings$count[df_unique_readings$single_boat.READING_TIME == value] <- length(single_boat$INS_NAME[single_boat$READING_TIME == value])
-}
-
-```
-
-Create boat movement chart
-
-Easiest way to ensure that the boat moves equally in relation to the data set is to create a separate dataset to read through and animate based on. All instruments should have 2269 readings, so we can isolate unique readings and location from that instrument and do the x translation math based on that
-```{R}
-boat <- 'GUTHORM MAERSK'
-
-# subset to get only GUTHORM data
-single_boat <- df_sgr[df_sgr$VESSEL_NAME == boat,]
-
-locations <- data.frame(unique(single_boat$CURRENT_VESSEL_LOCATION))
-
-# x location of each lockage location estimated from inkscape. Could also theoretically be pulled off of a shape id
-locations$X_END <- c(20,77,117,161,201,243,360)
-
-
-single_ins <- single_boat[single_boat$STATION_NAME == 'U-ACAT200-LK1' & single_boat$SALINITY_GAGE_NAME == 'A',]
-df_boat_move <- data.frame(unique(single_ins$READING_TIME))
-
-# rename column
-names(df_boat_move)[names(df_boat_move) == "unique.single_ins.READING_TIME."] <- "READING_TIME"
-
-# add location in lockage
-df_boat_move$CURRENT_VESSEL_LOCATION <- single_ins$CURRENT_VESSEL_LOCATION[single_ins$READING_TIME == df_boat_move$READING_TIME]
-
-# add same keyframe animations
-df_boat_move <- data.frame(df_boat_move[order(df_boat_move$READING_TIME),])
-row.names(df_boat_move) <- NULL
-df_boat_move$KEYFRAME_ID <- seq(from=1, to=100, length = nrow(df_boat_move))
-
-# read through and get x location
-df_boat_move$X_LOC <- ""
-
-# need to read through and assign different step values depending on where the boat is in the lock
-start <- 5
-indexStart <- 1
-
-for (locationIndex in 1:nrow(locations)) {
-  count <- length(df_boat_move$CURRENT_VESSEL_LOCATION[df_boat_move$CURRENT_VESSEL_LOCATION == locations$unique.single_boat.CURRENT_VESSEL_LOCATION.[locationIndex]])
-  current <- locations$unique.single_boat.CURRENT_VESSEL_LOCATION.[locationIndex]
-
-  indexEnd <- indexStart + count - 1
-  
-  # current end of X location
-  currentEnd <- locations$X_END[locationIndex]
-  
-  # assign group the sequence
-  df_boat_move$X_LOC[indexStart:indexEnd] <- seq(from=start, to=currentEnd, length = (indexEnd - indexStart + 1)) 
-  
-  indexStart <- indexEnd + 1
-  start <- currentEnd
-}
-```
-
-
-
-Animation for 1 boat
-```{R}
-instruments <- unique(single_boat$INS_NAME)
-
-# create a keyframe df
-df_keyframe <- data.frame(unique(single_boat$READING_TIME))
-df_keyframe <- data.frame(df_keyframe[order(df_keyframe$unique.single_boat.READING_TIME.),])
-df_keyframe$KEYFRAME_ID <- seq(from=1, to=100, length = nrow(df_keyframe))
-
-#rename column
-names(df_keyframe)[names(df_keyframe) == "df_keyframe.order.df_keyframe.unique.single_boat.READING_TIME...."] <- "READING_TIME"
-
-for (insIndex in 1:length(instruments)) {
-  instrument <- instruments[insIndex]
-  
-  cat('(', insIndex, '/', length(instruments), ') ')
-  cat('Starting:', instrument)
-  
-  # find sub selection of readings
-  insReadings <- single_boat[single_boat$INS_NAME == instrument,]
-  
-  # put them in order
-  insReadings <-insReadings[order(insReadings$READING_TIME),]
-  cat('-')
-  
-  # create keyname declarations
-  key_name = paste('anim_', instrument, sep="")
-  my_frame <- minicss::Keyframes$new(name = key_name)
-  
-  for (rowIndex in 1:nrow(df_keyframe)) {
-    currentReading <- df_keyframe$READING_TIME[rowIndex]
-    
-    if (length(insReadings$READING_TIME[grepl(currentReading, insReadings$READING_TIME)]) == 1) {
-      colorVal <- insReadings$COLOR[insReadings$READING_TIME == currentReading]
-    } else {
-      colorVal <- '#000000'
-    }
-    
-    my_frame$add(time = paste(df_keyframe$KEYFRAME_ID[rowIndex], "%",sep = ""), fill = colorVal)
-  }
-  svg_total$add_css(as.character(my_frame))
-
-  cat('-')  
-  ################################################################################################## Define the animation
-  this_id <- instrument
-  anim_dur <- 60                     # animation duration in seconds
-  iter_count = 'infinite'
-  dir = 'normal'
-  # define the css animation
-  new_css <- Style$new(paste("#", this_id, sep=""))
-  # update with animation declaration
-  new_css$update(css_prop$animation(name = key_name, duration = anim_dur, iteration_count = iter_count, direction = dir))
-  # add that new css to the svg
-  svg_total$add_css(as.character(new_css))
-  
-  cat('-Complete')
-  cat('\n')
-}
-
-# assign the labels manually in css to add the !important declaration 
-svg_total$add_css(paste("#scale_low { fill: ", color_df[1,1] ,"!important;}", sep=""))
-
-svg_total$add_css(paste("#scale_mid { fill: ", color_df[16,1] ,"!important;}", sep=""))
-
-svg_total$add_css(paste("#scale_high { fill: ", color_df[32,1] ,"!important;}", sep=""))
-
-writeLines(as.character(svg_total), paste("man/figures/", boat, "_total_animated.svg", sep=""))
-```
-
-
-```{R}
-# view new svg
-minisvg::knit_print.SVGDocument(svg_total)
-
-```
-
-
+# Total Animation Steps
 Create a loop that will run through each ship and create images.
 ```{R}
 svg_total <- minisvg::parse_svg_doc("man/figures/total_lock_cross_section.svg")
@@ -288,6 +107,7 @@ for (boat in boats) {
   # get a fresh copy of the template
   svg_total <- minisvg::parse_svg_doc("man/figures/total_lock_cross_section.svg")
 
+  # get all ids
   df_svg_id <- get_ids(svg_total)
   df_svg_id
 
@@ -295,23 +115,27 @@ for (boat in boats) {
   # subset to get only boat data
   single_boat <- df_sgr[df_sgr$VESSEL_NAME == boat,]
   
+  #----------------------------------------------------------------------------------------------------------COLOR-----------------------------#
   # max salinity option (this is also the number of bins)
   max_sal = 32
   
+  # define color scheme for salinity bins. blue is low and red is high salinity
   colors <- colorspace::divergingx_hcl(n = max_sal, palette = 'RdYlBu')
   colors <- rev(colors)
   
   # create a new column for the instrument name that matches the assigned id
   single_boat$INS_NAME <- paste(sub(".*200-", "", single_boat$STATION_NAME), single_boat$SALINITY_GAGE_NAME, sep="_")
-  single_boat$COLOR <- ""
-  max_sal <- max_sal - 1
   
-  # assign color column based on bins and diverging colors
+  # create color column
+  single_boat$COLOR <- ""
+  
+  # assign color column based on bins and diverging colors. works through all bins and assigns through each pass
+  max_sal <- max_sal - 1
   for(i in 0:max_sal) {
     single_boat$COLOR[single_boat$SALINITY_MEAS >= i & single_boat$SALINITY_MEAS < i + 1] <- colors[i + 1]
   }
 
-  # create df to compare and QA check
+  # create df to compare and QA check. this will show which bins apply to each color
   color_df <- data.frame(colors)
   color_df$sal_min <- 0:max_sal
   color_df$sal_max <- 1:(max_sal + 1)
@@ -329,6 +153,65 @@ for (boat in boats) {
     df_unique_readings$count[df_unique_readings$single_boat.READING_TIME == value] <- length(single_boat$INS_NAME[single_boat$READING_TIME == value])
   }
   
+  #------------------------------------------------------------------------------------------------------------BOAT_MOVEMENT----------------------------#
+  # subset to get only GUTHORM data
+  cat('-')
+  
+  # get unique vessel locations
+  locations <- data.frame(unique(single_boat$CURRENT_VESSEL_LOCATION))
+  
+  # x location of each lockage location estimated from inkscape. Could also theoretically be pulled off of a shape id
+  locations$X_END <- c(20,77,117,161,201,243,360)
+  
+  
+  # this instrument works for all boats all the time. use it to get unique movement values
+  single_ins <- single_boat[single_boat$STATION_NAME == 'U-ACAT200-LK1' & single_boat$SALINITY_GAGE_NAME == 'A',]
+  
+  # create a df of all unique readings for that boat
+  df_boat_move <- data.frame(unique(single_ins$READING_TIME))
+  
+  # rename column for consistency
+  names(df_boat_move)[names(df_boat_move) == "unique.single_ins.READING_TIME."] <- "READING_TIME"
+  
+  # add location in lockage
+  df_boat_move$CURRENT_VESSEL_LOCATION <- single_ins$CURRENT_VESSEL_LOCATION[single_ins$READING_TIME == df_boat_move$READING_TIME]
+  
+  # reorder so the readings are iterates in the sorted order (earliest to latest)
+  df_boat_move <- data.frame(df_boat_move[order(df_boat_move$READING_TIME),])
+  
+  # reindex row names
+  row.names(df_boat_move) <- NULL
+  
+  # add the keyframe animations
+  df_boat_move$KEYFRAME_ID <- seq(from=1, to=100, length = nrow(df_boat_move))
+  
+  # read through and get x location
+  df_boat_move$X_LOC <- ""
+  
+  # need to read through and assign different step (x) values depending on where the boat is in the lock
+  start <- 5
+  indexStart <- 1
+  
+  for (locationIndex in 1:nrow(locations)) {
+    count <- length(df_boat_move$CURRENT_VESSEL_LOCATION[df_boat_move$CURRENT_VESSEL_LOCATION == locations$unique.single_boat.CURRENT_VESSEL_LOCATION.[locationIndex]])
+    current <- locations$unique.single_boat.CURRENT_VESSEL_LOCATION.[locationIndex]
+  
+    indexEnd <- indexStart + count - 1
+    
+    # current end of X location
+    currentEnd <- locations$X_END[locationIndex]
+    
+    # assign group the sequence
+    df_boat_move$X_LOC[indexStart:indexEnd] <- seq(from=start, to=currentEnd, length = (indexEnd - indexStart + 1)) 
+    
+    # move index identifiers
+    indexStart <- indexEnd + 1
+    start <- currentEnd
+  }
+  
+  cat('-')
+  
+  #------------------------------------------------------------------------------------------------------------KEYFRAME----------------------------#
   instruments <- unique(single_boat$INS_NAME)
 
   # create a keyframe df
@@ -447,5 +330,6 @@ for (boat in boats) {
 }
 
 cat('\n\n')
-cat('Process has been completed. Script complete...')
+cat('Process has been completed. Exiting Script...')
 ```
+
